--- a/app/src/main/res/layout/timer_item.xml
+++ b/app/src/main/res/layout/timer_item.xml
@@ -28,31 +28,35 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:text="00:00:00:00"
+            android:text="00:00:00"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/blinking_indicator"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageButton
-            android:id="@+id/start_pause_button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+        <com.secondslot.pomodoro.view.circularprogressbar.CircularProgressBar
+            android:id="@+id/progress_circular"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
             android:layout_marginEnd="10dp"
-            android:background="@color/cardview_light_background"
-            android:padding="8dp"
-            android:src="@drawable/ic_baseline_play_arrow_24"
+            app:layout_constraintEnd_toStartOf="@id/start_pause_button"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <Button
+            android:id="@+id/start_pause_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Start"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/restart_button"
+            app:layout_constraintEnd_toStartOf="@id/reset_button"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/restart_button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
+            android:id="@+id/reset_button"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:background="@color/cardview_light_background"
-            android:padding="8dp"
             android:src="@drawable/ic_baseline_refresh_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/delete_button"
@@ -60,11 +64,9 @@
 
         <ImageButton
             android:id="@+id/delete_button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:background="@color/cardview_light_background"
-            android:padding="8dp"
             android:src="@drawable/ic_baseline_delete_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
