--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -16,13 +16,13 @@
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/delimeter_view"
+        app:layout_constraintBottom_toTopOf="@id/delimiter_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/timer_item" />
 
     <View
-        android:id="@+id/delimeter_view"
+        android:id="@+id/delimiter_view"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/gray_400"
@@ -32,15 +32,21 @@
         app:layout_constraintBottom_toTopOf="@id/minutes_picker"/>
 
     <EditText
+        android:id="@+id/hours_picker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TimePickerText"
+        android:layout_marginBottom="4dp"
+        app:layout_constraintBottom_toTopOf="@id/hours_text_view"
+        app:layout_constraintStart_toStartOf="@id/hours_text_view"
+        app:layout_constraintEnd_toEndOf="@id/hours_text_view"/>
+
+    <EditText
         android:id="@+id/minutes_picker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="00"
+        style="@style/TimePickerText"
         android:layout_marginBottom="4dp"
-        android:maxLength="3"
-        android:background="@android:color/transparent"
-        android:inputType="time"
-        android:textAppearance="?attr/textAppearanceHeadline4"
         app:layout_constraintBottom_toTopOf="@id/minutes_text_view"
         app:layout_constraintStart_toStartOf="@id/minutes_text_view"
         app:layout_constraintEnd_toEndOf="@id/minutes_text_view"/>
@@ -49,24 +55,30 @@
         android:id="@+id/seconds_picker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="00"
+        style="@style/TimePickerText"
         android:layout_marginBottom="4dp"
-        android:maxLength="2"
-        android:background="@android:color/transparent"
-        android:inputType="time"
-        android:textAppearance="?attr/textAppearanceHeadline4"
         app:layout_constraintBottom_toTopOf="@id/seconds_text_view"
         app:layout_constraintStart_toStartOf="@id/seconds_text_view"
         app:layout_constraintEnd_toEndOf="@id/seconds_text_view"/>
+
+    <TextView
+        android:id="@+id/hours_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?attr/textAppearanceOverline"
+        android:layout_marginStart="16dp"
+        android:text="@string/hours"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/margin_bottom_guideline"/>
 
     <TextView
         android:id="@+id/minutes_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?attr/textAppearanceOverline"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="10dp"
         android:text="@string/minutes"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/hours_text_view"
         app:layout_constraintBottom_toTopOf="@id/margin_bottom_guideline"/>
 
     <TextView
