--- a/app/src/main/res/layout/timer_item.xml
+++ b/app/src/main/res/layout/timer_item.xml
@@ -39,6 +39,7 @@
             android:layout_width="28dp"
             android:layout_height="28dp"
             android:layout_marginEnd="10dp"
+            app:custom_color="?attr/colorPrimary"
             app:layout_constraintEnd_toStartOf="@id/start_pause_button"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
@@ -56,7 +57,7 @@
             android:id="@+id/reset_button"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:background="@color/cardview_light_background"
+            android:background="@null"
             android:src="@drawable/ic_baseline_refresh_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/delete_button"
@@ -66,7 +67,7 @@
             android:id="@+id/delete_button"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:background="@color/cardview_light_background"
+            android:background="@null"
             android:src="@drawable/ic_baseline_delete_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
