--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,15 +2,19 @@
     <!-- Base application theme. -->
     <style name="Theme.Pomodoro" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/red_700</item>
-        <item name="colorPrimaryVariant">@color/red_700_dark</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/red_900</item>
+        <item name="colorPrimaryVariant">@color/red_900_dark</item>
+        <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/red_900</item>
+        <item name="colorSecondaryVariant">@color/red_900_dark</item>
+        <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="colorSurface">@color/red_900</item>
+        <item name="colorAccent">@color/red_300</item>
+        <item name="cardBackgroundColor">@color/gray_900</item>
     </style>
+
 </resources>
