--- a/app/src/main/res/layout/timer_item.xml
+++ b/app/src/main/res/layout/timer_item.xml
@@ -38,17 +38,21 @@
             android:id="@+id/progress_circular"
             android:layout_width="28dp"
             android:layout_height="28dp"
-            android:layout_marginEnd="10dp"
             app:custom_color="?attr/colorPrimary"
+            app:layout_constraintHorizontal_bias="0.9"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/stopwatch_timer"
             app:layout_constraintEnd_toStartOf="@id/start_pause_button"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/start_pause_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Start"
+            android:text="@string/start"
+            app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/reset_button"
             app:layout_constraintTop_toTopOf="parent" />
