--- a/app/src/main/res/layout/fragment_timer.xml
+++ b/app/src/main/res/layout/fragment_timer.xml
@@ -19,7 +19,7 @@
         app:layout_constraintBottom_toTopOf="@id/delimiter_view"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/timer_item" />
+        tools:listitem="@layout/item_timer" />
 
     <View
         android:id="@+id/delimiter_view"
